--- a/tmux.conf
+++ b/tmux.conf
@@ -35,12 +35,18 @@ set -g display-panes-time 2000
 # reload the .tmux.conf file with Ctrl-r
 bind C-r source-file ~/.tmux.conf \; display-message "configuration reloaded"
 
-set -g status-position bottom
-set -g status-bg colour234
-set -g status-fg colour137
-set -g status-left ''
-set -g status-left-length 20
 setw -g mode-keys vi
 
-setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
-setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'jimeh/tmux-themepack'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'github_username/plugin_name#branch'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
