regolith, tmux, spacemacs, zshrc update

--- a/tmux.conf
+++ b/tmux.conf
@@ -23,6 +23,9 @@ set -g pane-base-index 1
 # renumber windows sequentially after closing any of them
 set -g renumber-windows on
 
+# set vim mode
+set-window-option -g mode-keys vi
+
 # monitor windows for activity
 setw -g monitor-activity on
 
@@ -37,10 +40,16 @@ bind C-r source-file ~/.tmux.conf \; display-message "configuration reloaded"
 
 setw -g mode-keys vi
 
+# set terminal title
+set-option -g set-titles on
+set-option -g set-titles-string "#S / #W"
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'jimeh/tmux-themepack'
+
+set -g @themepack 'powerline/block/cyan'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
