--- a/tmux.conf
+++ b/tmux.conf
@@ -3,6 +3,8 @@ set -sg repeat-time 100
 # increase scrollback lines
 set -g history-limit 65536
 
+set-option -g xterm-keys on
+
 # keybinding to clear history
 bind C-k clear-history \; display-message "history cleared"
 
@@ -45,11 +47,9 @@ set-option -g set-titles on
 set-option -g set-titles-string "#S / #W"
 
 # List of plugins
-set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'jimeh/tmux-themepack'
-
-set -g @themepack 'powerline/block/cyan'
+set -g @plugin 'egel/tmux-gruvbox'
+set -g @tmux-gruvbox 'dark' # or 'light', 'dark-transparent', 'light-transparent'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
